package com.lvl6.proto;

option java_outer_classname = "InfoProto";

message MinimumUserProto {
	required int32 userId = 1;
	required string name = 2;
	required UserType userType = 3;
	
	enum UserType {
		GOOD_WARRIOR = 0;
		GOOD_ARCHER = 1;
		GOOD_MAGE = 2;
		BAD_WARRIOR = 3;
		BAD_ARCHER = 4;
		BAD_MAGE = 5;
	}
}

message MinimumEquipProto {
	required int32 equipId = 1;
	required string name = 2;
}

message MinimumUserStructureProto {
	required int32 structId = 1;
	required int32 xCoord = 2;
	required int32 yCoord = 3;
}

message FullUserProto {

}

message FullTaskProto {
	required int32 id = 1;
	required string name = 2;
	required string description = 3;
	required int32 cityId = 4;
	required int32 energyCost = 5;
	required int32 minCoinsGained = 6;
	required int32 maxCoinsGained = 7;
	required float chanceOfEquipLoot = 8;
	repeated int32 equipIds = 9;
	required int32 expGained = 10;
	required int32 minArmySize = 11;
	required int32 assetNumWithinCity = 12;
	required int32 numRequiredForCompletion = 13;
}